--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -93,9 +93,9 @@
                                                         <input type="range" class="form-range" min="0" max="10"
                                                             id="customRange2" value="0" name="review">
                                                         <textarea name="comment" id="" cols="60" rows="5"></textarea>
-                                                        <input type="text" name="user" value="<%= user %>" hidden>
+                                                        <input type="text" name="client" value="<%= user.user %>" >
                                                         <input type="text" name="product" value="<%= data.product %>"
-                                                            hidden>
+                                                            >
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary"
