--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -36,7 +36,34 @@
         </div>
         <div class="col-6 d-flex align-items-center flex-column">
             <p class="fs-4">Acciones de Cuenta</p>
-            <button class="btn btn-info text-light w-50 my-2">Cambiar Contraseña</button>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-info w-50 my-2 text-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Cambiar Contraseña
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Cambiar Contraseña</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <form action="" method="post">
+                            <div class="modal-body">
+                                Nueva Contraseña: 
+                                <input type="password" name="password">
+                                <input type="text" name="id">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-success">Guardar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <button class="btn btn-danger w-50 my-2">Desactivar cuenta</button>
         </div>
     </div>
