--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -50,11 +50,10 @@
                             <h1 class="modal-title fs-5" id="exampleModalLabel">Cambiar Contraseña</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <form action="" method="post">
+                        <form action="/api/newPassword/" method="post">
                             <div class="modal-body">
                                 Nueva Contraseña: 
                                 <input type="password" name="password">
-                                <input type="text" name="id">
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
