--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -54,7 +54,10 @@
             </nav>    
         </div>   
         <div class="col d-flex justify-content-end align-items-center">
-            <input class="form-control w-50 mx-3" list="datalistOptions" id="exampleDataList" placeholder="buscar..." type="text" name="busqueda">
+            <img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png"
+                    alt="search--v1" onclick="viewsProducts()" />
+                <input class="form-control w-100 border-0" list="datalistOptions" id="searchViewProduct"
+                    placeholder="buscar producto..." type="text" name="busqueda">
             <datalist id="datalistOptions">
                 <option value="camisas">
             </datalist>
@@ -95,3 +98,4 @@
         </div>
     </div>
 </div>
+
