--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/nav-login.js"></script>
+    <script src="/search.js"></script>
 </body>
 
 </html>
