--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -195,4 +195,10 @@
     </div>
 <% } %>
 
-<script src="search.js"></script>
+
+<input type="text" value="<%= confirmation %>" id="confirmation" hidden>
+<input type="text" value="<%= mensaje %>" id="mensaje" hidden>
+<input type="text" value="<%= icon %>" id="icon" hidden>
+
+<script src="/alerts.js"></script>
+<script src="/search.js"></script>
