--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -93,7 +93,7 @@
                 </ul>
             </div>
             <div class="col-4 border-end d-flex justify-content-start">
-                <a href="/productos" class="text-dark">Todos los productos</a>
+                <a href="/views/products" class="text-dark">Todos los productos</a>
             </div>
         </div>
     </div>
