--- a/views/viewPorducts.ejs
+++ b/views/viewPorducts.ejs
@@ -1,7 +1,7 @@
 <div class="row">
     <main>
         <!-- espacio para productos -->
-        <div class="row ms-4">
+        <div class="row ms-4 mb-5">
             <!-- espacio para productos -->
             <% products.forEach((product)=> { %>
                 <div class="card ms-4 mt-4 col-2" style="width: 18rem;">
