Cambios en card de productos
-> Se asigna un id y se pone al centro el botón de ver productos

--- a/views/viewPorducts.ejs
+++ b/views/viewPorducts.ejs
@@ -12,7 +12,7 @@
                         </h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
                             of the card's content.</p>
-                        <a href="/producto/<%= product._id %>" class="btn btn-primary">Ver producto</a>
+                        <a href="/producto/<%= product._id %>" class="btn btn-primary" id="vwproduct">Ver producto</a>
                     </div>
                 </div>
                 <% }) %>
