Se centra el texto de las cards

--- a/views/viewPorducts.ejs
+++ b/views/viewPorducts.ejs
@@ -7,7 +7,7 @@
                 <div class="card ms-4 mt-4 col-2" style="width: 18rem;">
                     <img src="/images/<%= product.image %>" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">
+                        <h5 class="card-title text-center">
                             <%= product.product %>
                         </h5>
                         <a href="/producto/<%= product._id %>" class="btn btn-primary" id="vwproduct">Ver producto</a>
