--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -84,14 +84,17 @@
                                         <%= data.categorie %>
                                     </td>
                                     <td>
-                                        <% if(data.status == 'active'){ %>
-                                            <button class="btn btn-primary"><a class="text-dark" href="/status/categorie/<%= data._id %>/inactive">Desactivar</a></button>
-                                        <%} else {%>
-                                            <button class="btn btn-primary"><a class="text-dark" href="/status/categorie/<%= data._id %>/active">Activar</a></button>
-                                        <% } %>
+                                        <% if(data.status=='active' ){ %>
+                                            <button class="btn btn-primary"><a class="text-dark"
+                                                    href="/status/categorie/<%= data._id %>/inactive">Desactivar</a></button>
+                                            <%} else {%>
+                                                <button class="btn btn-primary"><a class="text-dark"
+                                                        href="/status/categorie/<%= data._id %>/active">Activar</a></button>
+                                                <% } %>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger text-light"><a class="text-light" href="/delete/categorie/<%= data._id %>">Eliminar</a></button>
+                                        <button class="btn btn-danger text-light"><a class="text-light"
+                                                href="/delete/categorie/<%= data._id %>">Eliminar</a></button>
                                     </td>
                                 </tr>
                         </tbody>
@@ -100,3 +103,8 @@
                 </div>
             </div>
             <% } %>
+                <input type="text" value="<%= confirmation %>" id="confirmation" hidden>
+                <input type="text" value="<%= mensaje %>" id="mensaje" hidden>
+                <input type="text" value="<%= icon %>" id="icon" hidden>
+
+                <script src="/alerts.js"></script>
