--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -80,14 +80,14 @@
                 <ul class="list-group">
                     <div class="row">
                         <div class="col-6">
-                            <li class="list-group-item border-0"><a href="/productos/textil" class="text-dark">textil</a></li>
-                            <li class="list-group-item border-0"><a href="/productos/superficies planas" class="text-dark">superficies planas</a></li>
-                            <li class="list-group-item border-0"><a href="/productos/ceramica" class="text-dark">ceramica</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/textil" class="text-dark">Textiles</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/superficies planas" class="text-dark">Accesorios</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/ceramica" class="text-dark">Ceramica</a></li>
                         </div>
                         <div class="col-6">
-                            <li class="list-group-item border-0"><a href="/productos/aluminio" class="text-dark">aluminio</a></li>
-                            <li class="list-group-item border-0"><a href="/productos/vidrio" class="text-dark">vidrio</a></li>
-                            <li class="list-group-item border-0"><a href="/productos/papeleriaw" class="text-dark">papeleria</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/aluminio" class="text-dark">Aluminio</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/vidrio" class="text-dark">Vidrio</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/papeleriaw" class="text-dark">Papeleria</a></li>
                         </div>
                     </div>
                 </ul>
