--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -106,7 +106,7 @@
 										<div class="modal-footer">
 											<button type="button" class="btn btn-secondary"
 												data-bs-dismiss="modal">Cerrar</button>
-											<button type="button" class="btn btn-primary">Crear</button>
+											<button type="submit" class="btn btn-primary">Crear</button>
 										</div>
 									</form>
 								</div>
