--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -14,7 +14,7 @@
         <div class="row d-flex align-items-center justify-content-between my-3">
             <div class="col-3 my-2 mx-0 d-flex flex-row align-items-center border-bottom">
                 <img width="30" height="30" src="https://img.icons8.com/ios/30/search--v1.png"
-                    alt="search--v1" onclick="" />
+                    alt="search--v1" onclick="searchOrders()" />
                 <input class="form-control w-100 border-0" list="datalistOptions" id="seacrhOrder"
                     placeholder="buscar producto..." type="text" name="busqueda">
             </div>
@@ -47,10 +47,10 @@
                                 <%= data.status %>
                             </td>
                             <td>
-                                
+                                <button class="btn btn-info"><a href="/pedidos/detalles/<%= data._id %>" class="text-light">Detalles</a></button>
                             </td>
                             <td>
-
+                                <button class="btn btn-danger"><a href="/delete/orders/<%= data._id %>" class="text-light">Cancelar</a></button>
                             </td>
                         </tr>
                 </tbody>
