--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -114,6 +114,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- tabla para mostrar los usuarios del sistema -->
 				<div class="row my-3">
 					<table class="table my-3 table-bordered">
 						<thead>
