--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-danger w-50 my-2">Desactivar cuenta</button>
+            <button class="btn btn-danger w-50 my-2"><a href="/status/user/<%= user.user %>" class="text-light">Desactivar Cuenta</a></button>
         </div>
     </div>
 </div>
