--- a/views/comentarios.ejs
+++ b/views/comentarios.ejs
@@ -118,8 +118,31 @@
                                                 <% } %>
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger"><a href="/delete/comment/<%= data._id %>"
-                                                class="text-light">Eliminar</a></button>
+                                        <button type="button" class="btn btn-danger mb-3" data-bs-toggle="modal"
+											data-bs-target="#staticBackdrop<%= data._id %>delete">
+											Eliminar
+										</button>
+										<div class="modal fade" id="staticBackdrop<%= data._id %>delete"
+											data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+											aria-labelledby="staticBackdropLabel" aria-hidden="true">
+											<div class="modal-dialog">
+												<div class="modal-content">
+													<div class="modal-header">
+														<button type="button" class="btn-close" data-bs-dismiss="modal"
+															aria-label="Close"></button>
+													</div>
+													<div class="modal-body">
+														¿Esta seguro que desea eliminar el comentario?
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-primary">
+															<a href="/delete/comments/<%= data._id %>"
+																class="text-light text-decoration-none">Aceptar</a>
+														</button>
+													</div>
+												</div>
+											</div>
+										</div>
                                     </td>
                                 </tr>
                                 <% }) %>
