--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -1,69 +1,74 @@
-<div class="container">
-    <div class="row my-3">
-        <div class="col-6 border-end">
-            <p class="fs-4">Informacion De Usuario</p>
-            <form action="" method="post">
-                <div class="row d-flex flex-row my-3">
-                    <div class="col">
-                        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                        <input type="text" class="form-control w-75" id="exampleFormControlInput1" name="name">
-                    </div>
-                    <div class="col">
-                        <label for="exampleFormControlInput2" class="form-label">Apellido</label>
-                        <input type="text" class="form-control w-75" id="exampleFormControlInput2" name="lastname">
-                    </div>
-                </div>
-                <div class="row d-flex flex-row my-3">
-                    <div class="col">
-                        <label for="exampleFormControlInput3" class="form-label">Correo</label>
-                        <input type="email" class="form-control w-75" id="exampleFormControlInput3" name="email">
-                    </div>
-                    <div class="col">
-                        <label for="exampleFormControlInput4" class="form-label">Usuario</label>
-                        <input type="text" class="form-control w-75" id="exampleFormControlInput4" name="user">
-                    </div>
-                </div>
-                <div class="row d-flex flex-row my-3">
-                    <div class="col">
-                        <label for="exampleFormControlInput5" class="form-label">Documento</label>
-                        <input type="text" class="form-control w-50" id="exampleFormControlInput5" name="document">
-                    </div>
-                </div>
-                <div class="row d-flex flex-row my-3 justify-content-center">
-                    <button type="submit" class="btn btn-success w-50 mt-3">Guardar Cambios</button>
-                </div>
-            </form>
-        </div>
-        <div class="col-6 d-flex align-items-center flex-column">
-            <p class="fs-4">Acciones de Cuenta</p>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-info w-50 my-2 text-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Cambiar Contraseña
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Cambiar Contraseña</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<% if(user==false){ %>
+    <%- include('include/error') %>
+<% } else { %>
+    <div class="container">
+        <div class="row my-3">
+            <div class="col-6 border-end">
+                <p class="fs-4">Informacion De Usuario</p>
+                <form action="/api/modifyUser" method="post">
+                    <% data.forEach((data) => { %>
+                        <div class="row d-flex flex-row my-3">
+                            <div class="col">
+                                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                                <input type="text" class="form-control w-75" id="exampleFormControlInput1" name="name" value="<%= data.name %>">
+                            </div>
+                            <div class="col">
+                                <label for="exampleFormControlInput2" class="form-label">Apellido</label>
+                                <input type="text" class="form-control w-75" id="exampleFormControlInput2" name="lastname" value="<%= data.lastname %>">
+                            </div>
                         </div>
-                        <form action="/api/newPassword/" method="post">
-                            <div class="modal-body">
-                                Nueva Contraseña: 
-                                <input type="password" name="password">
+                        <div class="row d-flex flex-row my-3">
+                            <div class="col">
+                                <label for="exampleFormControlInput3" class="form-label">Correo</label>
+                                <input type="email" class="form-control w-75" id="exampleFormControlInput3" name="email" value="<%= data.email %>">
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-success">Guardar</button>
+                            <div class="col">
+                                <label for="exampleFormControlInput4" class="form-label">Documento</label>
+                                <input type="text" class="form-control w-75" id="exampleFormControlInput4" name="document" value="<%= data.document %>" disabled>                                
                             </div>
-                        </form>
+                        </div>
+                        <div class="row d-flex flex-row my-3 hidden">
+                            <div class="col">
+                                <input type="text" class="form-control w-75" id="exampleFormControlInput5" name="user" value="<%= data.user %>" hidden>
+                            </div>
+                        </div>
+                        <div class="row d-flex flex-row my-3 justify-content-center">
+                            <button type="submit" class="btn btn-success w-50 mt-3">Guardar Cambios</button>
+                        </div>
+                    <% }) %>
+                </form>
+            </div>
+            <div class="col-6 d-flex align-items-center flex-column">
+                <p class="fs-4">Acciones de Cuenta</p>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-info w-50 my-2 text-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Cambiar Contraseña
+                </button>
+    
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Cambiar Contraseña</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <form action="/api/newPassword/" method="post">
+                                <div class="modal-body">
+                                    Nueva Contraseña: 
+                                    <input type="password" name="password">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-success">Guardar</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                <button class="btn btn-danger w-50 my-2"><a href="/status/user/<%= user.user %>" class="text-light">Desactivar Cuenta</a></button>
             </div>
-            <button class="btn btn-danger w-50 my-2"><a href="/status/user/<%= user.user %>" class="text-light">Desactivar Cuenta</a></button>
         </div>
     </div>
-</div>
+<% } %>
