--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,10 @@
                         </div>
                     </div>
         </main>
-    </div>
+    </div>      
 </div>
+<input type="text" value="<%= confirmation %>" id="confirmation" hidden>
+<input type="text" value="<%= mensaje %>" id="mensaje" hidden>
+<input type="text" value="<%= icon %>" id="icon" hidden>
 <script src="/index.js"></script>
 <script src="/alerts.js"></script>
