--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -50,7 +50,7 @@
                                 
                             </td>
                             <td>
-
+                                <button class="btn btn-danger"><a href="/cancel/orders/<%= data._id %>" class="text-light">Cancelar pedido</a></button>
                             </td>
                         </tr>
                 </tbody>
