--- a/views/viewPorducts.ejs
+++ b/views/viewPorducts.ejs
@@ -6,7 +6,7 @@
             <!-- espacio para productos -->
             <% products.forEach((product)=> { %>
                 <div class="card ms-4 mt-4 col-2" style="width: 18rem;">
-                    <img src="/images/<%= product.image %>" class="card-img-top" alt="...">
+                    <img src="/images/<%= product.image[0] %>" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">
                             <%= product.product %>
