reporte general de usuarios

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -113,6 +113,9 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-3 d-flex justify-content-end">
+						<a href="/report/user" class="btn btn-primary" target="_blank">Reporte de Usuarios</a>
+					</div>
 				</div>
 				<!-- tabla para mostrar los usuarios del sistema -->
 				<div class="row my-3">
