Reporte productos por categorias

--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -95,6 +95,7 @@
                                     <td>
                                         <button class="btn btn-danger text-light"><a class="text-light"
                                                 href="/delete/categorie/<%= data._id %>">Eliminar</a></button>
+                                        <a class="btn btn-warning text-light" href="/report/categories/<%= data._id %>/getReport">Reporte</a>
                                     </td>
                                 </tr>
                         </tbody>
