--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -105,7 +105,7 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p class="fs-4 text-center">Cantidad de Productos por Categorias (Activas)</p>
+                                        <p class="fs-4 text-center">Cantidad de productos por categorías (Activas)</p>
                                         <canvas id="categorieProducts"></canvas>
                                     </div>
                                 </div>
