--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -114,7 +114,10 @@
 						</div>
 					</div>
 					<div class="col-3 d-flex justify-content-end">
-						<a href="/report/user" class="btn btn-primary" target="_blank">Reporte de Usuarios</a>
+						<a href="/report/user/admin" class="btn btn-primary" target="_blank">Reporte de Administradores</a>
+					</div>
+					<div class="col-3 d-flex justify-content-end">
+						<a href="/report/user/client" class="btn btn-primary" target="_blank">Reporte de Clientes</a>
 					</div>
 				</div>
 				<!-- tabla para mostrar los usuarios del sistema -->
