--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -124,7 +124,7 @@
 					<!-- Button trigger modal -->
 					<button type="button" class="btn btn-primary" data-bs-toggle="modal"
 						data-bs-target="#exampleModalCategorie">
-						Gráficos
+						Graficos
 					</button>
 		
 					<!-- Modal -->
