--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -40,7 +40,7 @@
             <div class="col-3 my-3">
                 <div class="card">
                     <div class="card-header fs-3">
-                        Categorias
+                        Categorías
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0 d-flex align-items-center flex-column">
@@ -67,7 +67,7 @@
             <div class="col-3 my-3">
                 <div class="card">
                     <div class="card-header fs-3">
-                        Comentarios
+                        Reseñas
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0 d-flex align-items-center flex-column">
