--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -7,7 +7,7 @@
                         aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/administracion" class="text-dark">Inicio</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Categorias</li>
+                            <li class="breadcrumb-item active" aria-current="page">Categorías</li>
                         </ol>
                     </nav>
                 </div>
@@ -22,7 +22,7 @@
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-dark" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Añadir Categroia
+                            Añadir categoría
                         </button>
 
                         <!-- Modal -->
@@ -72,7 +72,7 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th scope="col">Categoria</th>
+                                <th scope="col">Categoría</th>
                                 <th scope="col">Estado</th>
                                 <th scope="col">Eliminar</th>
                             </tr>
