--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
                 <div class="container d-flex justify-content-start mt-3">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary border-0" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">Subir Imagen</button>
+                        data-bs-target="#exampleModal">Subir imagen</button>
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -14,7 +14,7 @@
                             <form action="/api/images" method="post">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Subir Imagen</h1>
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Subir imagen</h1>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
@@ -73,7 +73,7 @@
                                 <div class="card text-center bg-dark border border-0" style="width: 13rem;">
                                     <img src="/images/ropa.jpg" class="card-img-top rounded" alt="...">
                                     <div class="card-body d-grid gap-2">
-                                        <h5 class="card-title">bolsa</h5>
+                                        <h5 class="card-title">Bolsa</h5>
                                         <p class="card-text"></p>
                                         <a href="#" class="btn btn-primary rounded tex">Ver mas...</a>
                                     </div>
@@ -93,7 +93,7 @@
                                 <div class="card text-center bg-dark border border-0" style="width: 13rem;">
                                     <img src="/images/frame.jpg" class="card-img-top rounded" alt="...">
                                     <div class="card-body d-grid gap-2">
-                                        <h5 class="card-title">frame</h5>
+                                        <h5 class="card-title">Frame</h5>
                                         <p class="card-text"></p>
                                         <a href="#" class="btn btn-primary rounded">Ver mas...</a>
                                     </div>
