--- a/views/account.ejs
+++ b/views/account.ejs
@@ -27,7 +27,7 @@
                             placeholder="" required name="email">
                     </div>
                     <div class="col-4">
-                        <label for="exampleFormControlInput1" class="form-label text-light">documento</label>
+                        <label for="exampleFormControlInput1" class="form-label text-light">Documento</label>
                         <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
                             placeholder="" required name="document">
                     </div>
@@ -44,10 +44,10 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                     <label class="form-check-label text-light" for="invalidCheck text-light">
-                        Acepta los terminos y condiciones
+                        Acepto los términos y condiciones
                     </label>
                     <div class="invalid-feedback">
-                        You must agree before submitting.
+                        Debe de estar de acuerdo antes de enviar
                     </div>
                 </div>
             </div>
