--- a/views/detalles.ejs
+++ b/views/detalles.ejs
@@ -46,7 +46,7 @@
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <h1 class="modal-title fs-5" id="staticBackdropLabel">Eliminar
-                                                        Pedido
+                                                        pedido
                                                     </h1>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
@@ -88,8 +88,7 @@
                                                             aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <label for="customRange2" class="form-label">Calificacion 1 al
-                                                            10</label>
+                                                        <label for="customRange2" class="form-label">Calificacion</label>
                                                         <input type="range" class="form-range" min="0" max="10"
                                                             id="customRange2" value="0" name="review">
                                                         <textarea name="comment" id="" cols="60" rows="5"></textarea>
