--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -52,8 +52,8 @@
                         <th scope="col">Fecha del pedido</th>
                         <th scope="col">Cliente</th>
                         <th scope="col">Estado del pedido</th>
-                        <th scope="col">informacion</th>
-                        <th scope="col">acciones</th>
+                        <th scope="col">Informacion</th>
+                        <th scope="col">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
